--- a/Expense_Tracker/src/index.css
+++ b/Expense_Tracker/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container{
+  @apply w-[20%] m-[auto] bg-linen
+}
+ul li{
+  @apply flex justify-between bg-white my-4 p-1
+}
